...

    <TextView android:id="@+id/_ignore_grabfocus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/textfield_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:ems="10"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="userLogin"
        android:text="@string/button_login_login"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
...
